--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>l31rb4g</title>
+    <title>Gabriel Paladino</title>
 
     <link rel="stylesheet" href="css/main.css"/>
 
