--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Gabriel Paladino</title>
 
+    <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 
     <script type="text/javascript" src="js/mootools-core-1.5.0-full-nocompat-yc.js"></script>
